--- a/apps/client/src/index.html
+++ b/apps/client/src/index.html
@@ -10,6 +10,9 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="https://kit.fontawesome.com/0fba103157.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/0fba103157.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
